[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/bosses/pyramidBoss/sides/side2.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/bosses/pyramidBoss/pyramidBoss.gd" type="Script" id=2]
[ext_resource path="res://src/bosses/pyramidBoss/sides/side3.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/bosses/pyramidBoss/sides/side1.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/bosses/pyramidBoss/sides/side4.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=1]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.103896, 0.25974, 0.461039, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.515625, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1000.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=7]
vertex_color_use_as_albedo = true

[sub_resource type="CubeMesh" id=8]
material = SubResource( 7 )
size = Vector3( 20, 20, 20 )

[node name="pyramidBoss" type="Area"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="oneSecondTimer" type="Timer" parent="."]
autostart = true

[node name="side1" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 16 )

[node name="side2" parent="." instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 16, 0, 0 )

[node name="side3" parent="." instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -16, 0, 0 )

[node name="side4" parent="." instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, 0, 0, -16 )

[node name="explodeParticles" type="Particles" parent="."]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, -61, 0 )
emitting = false
amount = 512
one_shot = true
explosiveness = 0.68
visibility_aabb = AABB( -128, -291, -232, 256, 582, 464 )
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 8 )

[node name="moveAroundTween" type="Tween" parent="."]
playback_process_mode = 0

[connection signal="moveToPhase2" from="." to="." method="_on_pyramidBoss_moveToPhase2"]
[connection signal="moveToPhase3" from="." to="." method="_on_pyramidBoss_moveToPhase3"]
[connection signal="timeout" from="oneSecondTimer" to="." method="_on_oneSecondTimer_timeout"]
[connection signal="tween_all_completed" from="moveAroundTween" to="." method="_on_moveAroundTween_tween_all_completed"]
